# ModuRL

./: .gitignore  Cargo.toml  Doc_Holes.md  README.md
.cargo/: config.toml
.github/workflows/: book-pages.yml  rust.yml
crates/examples/: Cargo.toml
crates/examples/examples/: dqn_cartpole_with_graphs.rs  ppo_bench.rs  ppo_cartpole_with_graphs.rs  ppo_half_cheetah_with_graphs.rs  ppo_mujoco_with_graphs.rs  rendered_lunar_lander_ppo.rs  sac_cartpole.rs  sac_mujoco.rs
crates/examples/examples/support/: graphers.rs
crates/examples/tests/: documentation_examples.rs  test_cartpole.rs
crates/modurl_ale/: .gitattributes  .gitignore  Cargo.toml  README.md  THIRD_PARTY_LICENSES.md  build.rs
crates/modurl_ale/src/: ale.rs  ale_sys.rs  atari.rs  bindings.rs  lib.rs  renderer.rs  wrappers.rs
crates/modurl_ale/tests/: rom_opt_in.rs
crates/modurl_gym/: Cargo.toml
crates/modurl_gym/python_tests/cartpole/: inputs.json
crates/modurl_gym/src/: testing.rs
crates/modurl_gym/src/box_2d/: lunar_lander.rs
crates/modurl_gym/src/classic_control/: cartpole.rs  mountain_car.rs
crates/modurl_logger/: Cargo.toml
crates/modurl_logger/src/: aggregation.rs  error.rs  lib.rs  tensorboard.rs  terminal.rs
crates/modurl_logger/tests/: logger.rs
crates/modurl_mojoco/: Cargo.toml  LICENSE  README.md  THIRD_PARTY_LICENSES.md  build.rs
crates/modurl_mojoco/.cargo/: config.toml
crates/modurl_mojoco/assets/: half_cheetah.xml  hopper.xml  walker2d.xml
crates/modurl_mojoco/python_tests/: generate_parity.py
crates/modurl_mojoco/python_tests/half_cheetah/: trajectory.json
crates/modurl_mojoco/python_tests/hopper/: trajectory.json
crates/modurl_mojoco/python_tests/walker2d/: trajectory.json
crates/modurl_mojoco/src/: core.rs  half_cheetah.rs  hopper.rs  lib.rs  walker2d.rs
crates/modurl_mojoco/tests/: api.rs  parity.rs
docs/: book.toml
docs/site/: index.html
docs/src/: SUMMARY.md  core-concepts.md  custom-gym-environment.md  ddqn.md  dqn.md  environments.md  getting-started.md  how-to-guides.md  introduction.md  models-policies-and-distributions.md  ppo.md  q-learning.md  run-on-cuda-or-metal.md  understand-ppo-training.md  understand-q-learning-training.md  vectorized-environments.md
examples/: dqn_cartpole_with_graphs.rs  ppo_bench.rs  ppo_cartpole_with_graphs.rs  rendered_lunar_lander_ppo.rs
sb3_comparison/: ppo_cartpole.py
src/: actors.rs  agents.rs  buffers.rs  distributions.rs  documentation_tests.rs  experience_replay.rs  gym.rs  init.rs  lib.rs  lr_scheduler.rs  models.rs  parameter_schedule.rs  prelude.rs  spaces.rs  tensor_operations.rs  wrappers.rs
src/actors/: ddqn.rs  dqn.rs  ppo.rs
src/agents/: ddqn.rs  dqn.rs  ppo.rs  q_learning.rs  sac.rs
src/agents/q_learning/: ddqn.rs  dqn.rs
src/buffers/: experience.rs  experience_replay.rs  rollout_buffer.rs
src/distributions/: categorical.rs  gaussian.rs  transformed.rs
src/gym/: common_gyms.rs
src/models/: probabilistic_model.rs
src/wrappers/: info.rs  normalize.rs  observation.rs  reward.rs  time_limit.rs
tests/: documentation_examples.rs  test_cartpole.rs  test_ppo_determinism.rs
