[package]
name = "modurl"
version = "0.1.0"
edition = "2024"

[dependencies]
bon = "3.7.2"
candle-core = "0.11.0"
candle-nn = "0.11.0"
tracing = { version = "0.1.37", optional = true }

[features]
default = []
multithreading = []
cuda = ["candle-core/cuda", "modurl_gym/cuda"]
cudnn = ["candle-core/cudnn"]
metal = ["candle-core/metal"]

[dev-dependencies]
modurl_gym = { git = "https://github.com/ModuRL/ModuRL_Gym", features = [
    "rendering",
] }
tracing-subscriber = "0.3.20"
textplots = "0.8.7"

[patch."https://github.com/ModuRL/ModuRL"]
modurl = { path = "." }

# For profiler
[profile.release]
debug = true
