[package]
name = "modurl"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    ".",
    "crates/modurl_gym",
    "crates/modurl_ale",
    "crates/modurl_mojoco",
    "crates/examples",
]
resolver = "3"

[dependencies]
bon = "3.7.2"
candle-core = "0.11.0"
candle-nn = "0.11.0"
tracing = { version = "0.1.37", optional = true }

[features]
default = []
multithreading = []
cuda = ["candle-core/cuda"]
cudnn = ["candle-core/cudnn"]
metal = ["candle-core/metal"]

[patch.crates-io]
glutin = { git = "https://github.com/davidhozic/glutin", rev = "e95fe97f1857c0498ed2236c0e8d60e5a30a2854" }

# For profiler
[profile.release]
debug = true
