[package]
name = "modurl_gym"
version = "0.1.0"
edition = "2024"

[dependencies]
modurl = { version = "0.1.0", path = "../.." }
candle-core = "0.11.0"
tracing = { version = "0.1.37", optional = true }
log = { version = "0.4.28", optional = true }
box2d-rs = "0.0.4"
minifb = { version = "0.28.0", optional = true }
bon = "3.7.2"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = []
tracing = ["dep:tracing"]
logging = ["dep:log"]
rendering = ["dep:minifb"]
cuda = ["candle-core/cuda"]
cudnn = ["candle-core/cudnn"]
metal = ["candle-core/metal"]
