[package]
name = "modurl_mojoco"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "Gymnasium-compatible MuJoCo environments for ModuRL"
license = "MIT"

[dependencies]
modurl = { version = "0.1.0", path = "../.." }
bon = "3.7.2"
candle-core = "0.11.0"
rand = "0.9.2"
rand_distr = "0.5.1"

[target.'cfg(not(target_os = "macos"))'.dependencies]
mujoco-rs = { version = "5.0.0", features = ["auto-download-mujoco"] }

[target.'cfg(target_os = "macos")'.dependencies]
mujoco-rs = "5.0.0"

# A build dependency guarantees mujoco-rs's downloader finishes before this
# package's build script places the runtime DLL beside Windows executables.
[target.'cfg(not(target_os = "macos"))'.build-dependencies]
mujoco-rs = { version = "5.0.0", features = ["auto-download-mujoco"] }

[target.'cfg(target_os = "macos")'.build-dependencies]
mujoco-rs = "5.0.0"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = []
rendering = ["mujoco-rs/viewer"]
cuda = ["candle-core/cuda"]
cudnn = ["candle-core/cudnn"]
metal = ["candle-core/metal"]
